# Generated by Django 3.1.1 on 2020-09-09 06:16

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion
import django.utils.timezone


class Migration(migrations.Migration):

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
        ('school', '0002_auto_20200909_1516'),
        ('timetable', '0002_auto_20200908_2340'),
    ]

    operations = [
        migrations.CreateModel(
            name='InvitedTable',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('weekday', models.DateField(blank=True, default=django.utils.timezone.now, null=True)),
                ('time', models.SmallIntegerField(blank=True, default=0)),
                ('available', models.BooleanField()),
                ('classroom', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='school.classroom')),
                ('semester', models.ForeignKey(blank=True, on_delete=django.db.models.deletion.CASCADE, to='school.term')),
                ('subject', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='school.subject')),
                ('teacher', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='invited_teacher', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'abstract': False,
                'unique_together': {('weekday', 'time', 'teacher')},
            },
        ),
    ]
