@startuml
namespace school {
    class School {
        + region
        + name
    }
    class Semester {
        + School school
        + start
        + end
        + listOfdate get_semester()
    }
    class Holiday {
        + School school
        + date day
        + string text
    }
    class Classroom {
        + School school
        + User teacher
        + int grade
        + int number
    }
    class Subject {
        + School school
        + int grade
        + string name
        + int count
    }

    School *-- Semester
    School *-- Classroom
    School *-- Subject
    School *-- Holiday 
    Classroom *-- accounts.User
}

namespace timetable {
    abstract TimeTable {
        + User teacher
        + Semester semester
        + Classroom classroom
        + Subject subject
        + date weekday
        + int time
        + void save()
    }
    class HomeTable {
        + SubjectTable sub_teacher
        + InvitedTable inv_teacher
    }
    class SubjectTable {
        - void copy_to_home()
        + void save()
    }
    class InvitedTable {
        - void copy_to_home()
        + void save()        
    }
    TimeTable <|-- SubjectTable
    TimeTable <|-- HomeTable
    TimeTable <|-- InvitedTable
    HomeTable *-- SubjectTable
    HomeTable *-- InvitedTable

    TimeTable *-- accounts.User
    TimeTable *-- school.Semester
    TimeTable *-- school.Classroom
    TimeTable *-- school.Subject
}

namespace accounts {
    class User {
        + string email
        + string name
        + string password
        + role
    }
    class SubjectTeacher {
        + Subject subject
    }
    class HomeTeacher {
        + Classroom classroom
    }
    class InvitedTeacher {
        + date start
        + date end
    }
    User *-- HomeTeacher
    User *-- SubjectTeacher
    User *-- InvitedTeacher

    school.Classroom *-- HomeTeacher
    school.Subject *-- SubjectTeacher
}

@enduml